test/bad/sec_sselect.subst
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":false}],"globalsOffset":64,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":28}
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":false}],"globalsOffset":64,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":28}